add filter component

--- a/src/components/NavHeader/index.scss
+++ b/src/components/NavHeader/index.scss
@@ -2,7 +2,16 @@
 .icon-back {
   color: #333;
 }
-
+.detail .icon-share {
+  color: #fff;
+  font-size: 25px;
+}
+.detail .icon-back {
+  color: #fff;
+}
+.detail .am-navbar-title {
+  color: #fff;
+}
 .am-navbar-light {
   background-color: #f6f5f6;
 }
