--- a/src/pages/Map/Index.module.css
+++ b/src/pages/Map/Index.module.css
@@ -92,7 +92,7 @@
   overflow-y: auto;
   padding-bottom: 45px;
 }
-.house {
+/* .house {
   height: 120px;
   position: relative;
   box-sizing: border-box;
@@ -163,4 +163,4 @@
 .price {
   font-size: 16px;
   font-weight: bold;
-}
+} */
