--- a/src/pages/Detail/index.module.css
+++ b/src/pages/Detail/index.module.css
@@ -1,3 +1,6 @@
+.detail {
+  padding-bottom: 50px;
+}
 
 .navNoMargin {
   width: 100%;
@@ -7,9 +10,11 @@
   color: rgb(255, 255, 255);
   background-color: transparent;
 }
+
 .detailSlider {
   height: 250px;
 }
+
 .imgHeight {
   height: 250px;
 }
@@ -18,14 +23,17 @@
   padding: 10px;
   background-color: #fff;
 }
+
 .title {
   font-size: 16px;
   font-weight: normal;
 }
+
 .tags {
   position: relative;
   margin: 10px 0;
 }
+
 .tag {
   display: inline-block;
   font-size: 12px;
@@ -34,46 +42,197 @@
   padding: 4px 5px;
   margin-right: 5px;
 }
+
 .tag1 {
   color: #39becd;
   background: #e1f5f8;
 }
+
 .tag2 {
   color: #3fc28c;
   background: #e1f5ed;
 }
+
 .tag3 {
   color: #5aabfd;
   background: #e6f2ff;
 }
+
 .infoPrice {
   border-top: solid 1px #cecece;
   border-bottom: solid 1px #cecece;
   margin: 15px 0;
   padding: 15px 0;
 }
+
 .infoPriceItem {
   text-align: center;
   color: #999;
 }
+
 .infoPriceItem :global(div) {
   height: 26px;
   line-height: 26px;
 }
+
 .infoPriceItem :global(div:first-child) {
   color: #fa5741;
   font-size: 18px;
   font-weight: bolder;
 }
-.price {
 
-}
+.price {}
+
 .infoBasic {
   font-size: 12px;
 }
+
 .title {
   display: inline-block;
   color: #999;
   padding-right: 5px;
   line-height: 26px;
+}
+
+.map {
+  margin-top: 10px;
+  background-color: #fff;
+}
+
+.mapTitle {
+  padding: 10px;
+  font-size: 15px;
+  font-weight: normal;
+  color: #999;
+}
+
+.mapTitleArea {
+  color: #000;
+}
+
+.mapContainer {
+  height: 145px;
+  text-align: center;
+}
+
+.mapArrow {
+  background: url(http://map.baidu.com/fwmap/upload/r/map/fwmap/static/house/images/label.png) no-repeat;
+  position: absolute;
+  width: 11px;
+  height: 10px;
+  top: 23px;
+  left: 10px;
+  overflow: hidden;
+}
+
+.about {
+  padding: 10px;
+  background-color: #fff;
+  font-size: 15px;
+}
+
+.houseTitle {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #ccc;
+}
+
+.noData {
+  padding-top: 10px;
+  font-size: 15px;
+}
+
+.set {
+  margin-top: 10px;
+  padding: 10px;
+  background-color: #fff;
+}
+
+.concact {
+  padding-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.user {
+  display: inline-flex;
+  align-items: center;
+}
+
+.avatar {
+  height: 50px;
+  width: 50px;
+}
+
+.userTag {
+  padding-left: 10px;
+}
+
+.userAuth {
+  font-size: 12px;
+  color: #fa5741;
+  line-height: 16px;
+  vertical-align: middle;
+}
+
+.authIcon {
+  padding-right: 5px;
+  font-size: 12px;
+}
+
+.btn {
+  width: 70px;
+  font-size: 15px;
+  background-color: #fff;
+  border: 1px solid green;
+  border-radius: 3px;
+  padding: 5px;
+  color: green;
+}
+
+.describe {
+  padding-top: 15px;
+  line-height: 1.45;
+  letter-spacing: 1px
+}
+
+.love {
+  background-color: #fff;
+  padding: 10px;
+}
+
+.bottomAction {
+  z-index: 99999;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  height: 50px;
+  text-align: center;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  ine-height: 50px;
+  color: #999;
+}
+
+.actionItem {
+  line-height: 50px;
+  height: 100%;
+  margin-left: 0;
+}
+
+.bottomAction :global(div:first-child) {
+  border-right: 1px solid #999;
+}
+
+.favoriteImg {
+  width: 18px;
+  height: 18px;
+  margin-right: 5px;
+  vertical-align: middle;
+}
+
+.favorite {
+  font-size: 16px;
+  vertical-align: middle;
 }
